--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -32,3 +32,10 @@ body {
      position: absolute;
      z-index: -1;	
 }
+
+p {
+     font-variant: small-caps;
+}
+.project p {
+    font-variant: small-caps;
+}
